...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Explore-->
        <scene sceneID="ge1-LL-uDT">
            <objects>
                <viewControllerPlaceholder storyboardName="Explore" id="Pfg-2j-xxE" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Explore" image="magnifying-glass" id="RXL-Ah-Xlu"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lXc-vy-2Z0" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1" y="454"/>
        </scene>
...
            <point key="canvasLocation" x="244" y="454"/>
        </scene>
        <!--RecordData-->
        <scene sceneID="Ie7-6y-X3K">
            <objects>
                <viewControllerPlaceholder storyboardName="RecordData" id="bye-Kw-rc5" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Record" image="hand-with-pen" selectedImage="hand-with-pen" id="zXa-3o-mY9"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="r9B-KK-gFj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-262" y="454"/>
        </scene>
    </scenes>
...
