...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ydT-Bc-tIx">
                                            <rect key="frame" x="16" y="6" width="197" height="30"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="rating slider" label="rating slider"/>
                                            <connections>
                                                <action selector="sliderValueChanged:" destination="4Ko-sN-MHE" eventType="valueChanged" id="8ae-qY-c4h"/>
                                            </connections>
                                        </slider>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(range)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohS-xB-Xcb">
                                            <rect key="frame" x="301" y="12" width="58" height="21"/>
...
